--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial scale=1.0">
     <title>Immobili&euml;n Wyns</title>
     <link rel="stylesheet" href="css/basis.css">
-    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico" >
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
 </head>
 <body>
+<h1 class="outline">Index</h1>
 <header class="limited">
     <a href="index.html">
         <img id="logo" src="images/logo.png" alt="Het logo van immobilienkantoor Wyns" width="250" height="80">
@@ -16,7 +17,9 @@
 </header>
 
 <nav class="navigatie">
+    <h2 class="outline">Navigatie balk</h2>
     <section class="limited">
+        <h3 class="outline">Navigatie inhoud</h3>
         <a class="active" href="index.html">Home</a>
         <a href="html/verhuur.html">Verhuur</a>
         <a href="html/verkoop.html">Verkoop</a>
@@ -25,20 +28,24 @@
 </nav>
 
 <main class="limited">
-        <img id="headerimg" src="images/header.jpg" alt="Foto's van huizen aan de kust" width="1024" height="286">
+    <img id="headerimg" src="images/header.jpg" alt="Foto's van huizen aan de kust" width="1024" height="286">
     <h2>
         Immobili&euml;n kantoor Wyns, al meer dan 10 jaar tot uw dienst.
     </h2>
     <p>
         Bij Immobili&euml;n Wyns kan u zeker zijn van uw zaak, of u nu een apartement, vakantiewoning of garage zoekt,
-        wij kunnen u altijd van dienst zijn. Bij ons staan er 8 experts klaar om u persoonlijk te begeleiden, wat uw wensen ook zijn.
+        wij kunnen u altijd van dienst zijn. Bij ons staan er 8 experts klaar om u persoonlijk te begeleiden, wat uw
+        wensen ook zijn.
         Aarzel niet, neem gerust een kijkje op onze website of kom eens langs voor een gesprek en een kop koffie.
     </p>
 </main>
 
 <footer>
+    <h2 class="outline">Footer</h2>
     <aside id="footer" class="footer">
+        <h3 class="outline">Footer Tekstvak</h3>
         <section class="rij">
+            <h4 class="outline">Footer inhoud</h4>
             <nav class="kolom33">
                 <h2>Contact</h2>
                 <a id="mailto" href="mailto:contact@immowyns.be">contact@immowyns.be</a>
@@ -48,6 +55,7 @@
             <nav class="kolom33">
                 <h2>Navigatie</h2>
                 <nav class="navigatie-verticaal">
+                    <h3 class="outline">navigatie inhoud</h3>
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="html/verhuur.html">Verhuur</a></li>
