--- a/html/verhuurfiltered.html
+++ b/html/verhuurfiltered.html
@@ -2,32 +2,95 @@
 <html lang="nl">
 <head>
     <meta charset="UTF-8">
-    <title>Verhuur (Gefilterd)</title>
-    <link rel="stylesheet" href="../css/basis.css">
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>Verkoop (Gefilterd)</title>
+    <link rel="stylesheet" href="../css/basis.css">
+    <link rel="stylesheet" href="../css/verkoopverhuur.css">
+    <link rel="shortcut icon" type="image/x-icon" href="../images/favicon.ico">
 </head>
 <body>
+<h1 class="outline">Filterpagina panden te huur</h1>
 <header class="limited">
     <a href="../index.html">
         <img id="logo" src="../images/logo.png" alt="Het logo van immobilienkantoor Wyns" width="250" height="80">
     </a>
-    <h1>Immobili&euml;n Wyns</h1>
     <div></div>
 </header>
 
 <nav class="navigatie">
+    <h2 class="outline">Navigatie balk</h2>
     <section class="limited">
-        <a href="../index.html" id="navFirst">Home</a>
-        <a href="verhuur.html">Verhuur</a>
-        <a href="verkoop.html">Verkoop</a>
-        <a href="contact.html">Contact</a>
+        <h3 class="outline">Navigatie inhoud</h3>
+        <a href="../index.html">Home</a>
+        <a class="active" href="../html/verhuur.html">Verhuur</a>
+        <a href="../html/verkoop.html">Verkoop</a>
+        <a href="../html/contact.html">Contact</a>
     </section>
 </nav>
 
+<main>
+    <section class="vFilter">
+        <h2 class="outline">Filter</h2>
+        <label for="sFilterSlpk">Filters:</label>
+        <select name="slpkFilter" id="sFilterSlpk">
+            <option value="Geen slaapkamers">Geen slaapkamers</option>
+            <option value="1 Slaapkamer">1 Slaapkamer</option>
+            <option selected value="2 Slaapkamers">2 Slaapkamers</option>
+            <option value="3 Slaapkamers">3 Slaapkamers</option>
+            <option value="4+ Slaapkamers">4+ Slaapkamers</option>
+        </select>
+        <label for="sFilterPrijs"></label>
+        <select name="prijsFilter" id="sFilterPrijs">
+            <option selected value="nolimit">Geen voorkeur</option>
+            <option value="< 250">&lt; &euro;249</option>
+            <option value="250-500">&euro;250 - &euro;499</option>
+            <option value="500-750">&euro;500 - &euro;749</option>
+            <option value="750+">&gt; &euro;750</option>
+        </select>
+        <label for="sFilterVerhuur"></label>
+        <select name="sFilterTypeV" id="sFilterVerhuur">
+            <option value="weekend">Weekend</option>
+            <option value="midweek">Midweek</option>
+            <option value="Maand">Maand</option>
+            <option selected value="Jaar">Jaar</option>
+        </select>
+
+        <a href="verhuurfiltered.html">
+            <button id="vFilterBtn">Zoek</button>
+        </a>
+    </section>
+
+    <article class="limited">
+        <h2 class="outline">Gefilterde panden te huur</h2>
+        <section class="vBlock">
+            <a href="#">
+                <img class="vImg" src="../images/verhuur/thumbnails/appartement.jpg" alt="Foto van een appartement"
+                     width="205"
+                     height="140">
+                <h2>Appartement</h2>
+                <p>&euro; 430</p>
+            </a>
+        </section>
+        <section class="vBlock">
+            <a href="#">
+                <img class="vImg" src="../images/verhuur/thumbnails/appartement2.png"
+                     alt="Foto van een appartement"
+                     width="205"
+                     height="140">
+                <h2>Appartement</h2>
+                <p>&euro; 600</p>
+            </a>
+        </section>
+    </article>
+</main>
+
 </body>
 <footer>
-    <aside class="footer">
-        <nav class="rij">
+    <h2 class="outline">Footer</h2>
+    <aside id="footer" class="footer">
+        <h3 class="outline">Footer Tekstvak</h3>
+        <section class="rij">
+            <h4 class="outline">Footer inhoud</h4>
             <nav class="kolom33">
                 <h2>Contact</h2>
                 <a id="mailto" href="mailto:contact@immowyns.be">contact@immowyns.be</a>
@@ -37,22 +100,25 @@
             <nav class="kolom33">
                 <h2>Navigatie</h2>
                 <nav class="navigatie-verticaal">
+                    <h3 class="outline">navigatie inhoud</h3>
                     <ul>
                         <li><a href="../index.html">Home</a></li>
-                        <li><a href="verhuur.html">Verhuur</a></li>
-                        <li><a href="verkoop.html">Verkoop</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="../html/verhuur.html">Verhuur</a></li>
+                        <li><a href="../html/verkoop.html">Verkoop</a></li>
+                        <li><a href="../html/contact.html">Contact</a></li>
                     </ul>
                 </nav>
             </nav>
             <nav class="kolom33">
                 <h2>Openingsuren</h2>
-                <p>Maandag: gesloten</p>
-                <p>Dinsdag - Vrijdag: 9 - 16u</p>
-                <p>Zaterdag: 8 - 18u</p>
-                <p>Zondag: Gesloten</p>
+                <ul>
+                    <li>Maandag: gesloten</li>
+                    <li>Dinsdag - Vrijdag: 9 - 16u</li>
+                    <li>Zaterdag: 8 - 18u</li>
+                    <li>Zondag: Gesloten</li>
+                </ul>
             </nav>
-        </nav>
+        </section>
     </aside>
 </footer>
 </html>
