--- a/html/contactComplete.html
+++ b/html/contactComplete.html
@@ -30,7 +30,7 @@
         U boodschap is bij ons aangekomen, een medewerker neemt zo snel mogelijk contact met u op
     </h1>
     <a href="../index.html">
-        <button>
+        <button id="contactReturn">
             Terug naar de startpagina
         </button>
     </a>
