--- a/html/vhappartement.html
+++ b/html/vhappartement.html
@@ -71,7 +71,7 @@
             </section>
             <section class="kolom33">
                 <h3>Adres</h3>
-                <p>Spalaan 18, 8400 Koksijde</p>
+                <p>Bosquetiastraat 13, 8400 Koksijde</p>
             </section>
         </section>
 
@@ -107,6 +107,9 @@
                 </fieldset>
             </form>
         </section>
+
+        <h2 class="h2Offset">Locatie</h2>
+        <img class="locationImg" src="../images/verhuur/maps/bosquetia13.png" alt="Een foto van een kaartje met de locatie van het appartement" width="750" height="470">
     </article>
 </main>
 
