--- a/html/vhgaragebox1.html
+++ b/html/vhgaragebox1.html
@@ -104,6 +104,9 @@
                 </fieldset>
             </form>
         </section>
+
+        <h2 class="h2Offset">Locatie</h2>
+        <img class="locationImg" src="../images/verhuur/maps/spa18.png" alt="Een foto van een kaartje met de locatie van de garage" width="740" height="470">
     </article>
 
 
