--- a/html/vkappartement1.html
+++ b/html/vkappartement1.html
@@ -103,6 +103,9 @@
                 </fieldset>
             </form>
         </section>
+
+        <h2 class="h2Offset">Locatie</h2>
+        <img class="locationImg" src="../images/verkoop/maps/hert30.png" alt="Een foto van een kaartje met de locatie van het appartement" width="740" height="460">
     </article>
 </main>
 
