--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 
 <main class="limited">
     <img id="headerimg" src="images/header.jpg" alt="Foto's van huizen aan de kust" width="1024" height="286">
-    <h2>
+    <h2 class="h2Offset">
         Immobili&euml;n kantoor Wyns, al meer dan 10 jaar tot uw dienst.
     </h2>
-    <p>
+    <p class="uitleg">
         Bij Immobili&euml;n Wyns kan u zeker zijn van uw zaak, of u nu een apartement, vakantiewoning of garage zoekt,
         wij kunnen u altijd van dienst zijn. Bij ons staan er 8 experts klaar om u persoonlijk te begeleiden, wat uw
         wensen ook zijn.
