--- a/html/vkappartement3.html
+++ b/html/vkappartement3.html
@@ -101,6 +101,9 @@
                 </fieldset>
             </form>
         </section>
+
+        <h2 class="h2Offset">Locatie</h2>
+        <img class="locationImg" src="../images/verkoop/maps/steekspel27.png" alt="Een foto van een kaartje met de locatie van het appartement" width="740" height="460">
     </article>
 </main>
 
